distro-info (1.1) UNRELEASED; urgency=medium

  * Man pages and help: Clarify that --supported includes development releases
    (Closes: #902167, LP: #1727751)

 -- Stefano Rivera <stefanor@debian.org>  Sat, 24 Apr 2021 15:00:56 -0400

distro-info (1.0) unstable; urgency=medium

  [ Debian Janitor ]
  * Mark libdistro-info-perl as Multi-Arch: foreign.

  [ Stefano Rivera ]
  * Bump standards-Version to 4.5.1, no changes needed.
  * Bump copyright years.
  * Re-black Python.
  * Add support for Debian LTS (Closes: #782685)
  * Depend on distro-info-data (>= 0.46), with extra columns for
    Debian LTS and Ubuntu ESM.
  * Ignore W503 warnings from flake8, they are PEP-8 incompatible.
  * Handle currently unknown columns in CSV data.
  * Drop old Breaks+Replaces on ubuntu-dev-tools, no longer needed.
  * Reorganise help into a slightly more logical order.
  * Add support for Debian ELTS.
  * Update tests to match old date adjustments in distro-info-data 0.46.

  [ Brian Murray ]
  * Provide support for the milestone eol-esm and add filters for
    supported-esm to ubuntu-distro-info along with the python and perl
    modules. (LP: #1808038)
  * Only include LTS releases when filtering by supported-esm.

  [ Steve Langasek ]
  * Override uninteresting flake8 warnings about imports and doc strings.
  * Don't run tests over the distro_info_test directory, which is pointless
    and recursive.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 29 Jan 2021 13:35:30 -0700

distro-info (0.24) unstable; urgency=medium

  * Fix issues found by pylint 2.6.0 (Closes: #971094)
  * Blacken Python code
  * python: Define sets directly
  * Bump Standards-Version to 4.5.0
  * Switch to debhelper 13

 -- Benjamin Drung <bdrung@debian.org>  Mon, 28 Sep 2020 19:36:32 +0200

distro-info (0.23) unstable; urgency=medium

  * Drop python2 support; Closes: #943052, #936408

 -- Sandro Tosi <morph@debian.org>  Wed, 08 Jan 2020 23:06:26 -0500

distro-info (0.22) unstable; urgency=medium
